CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(accessor LANGUAGES CXX)

ADD_LIBRARY(accessor INTERFACE)

SET_TARGET_PROPERTIES(accessor PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(accessor INTERFACE header)
TARGET_LINK_LIBRARIES(accessor INTERFACE tuple)

ADD_EXECUTABLE(test-accessor test/tests.cc)
SET_TARGET_PROPERTIES(test-accessor PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-accessor accessor Catch2)

ENABLE_TESTING()
ADD_TEST(test-accessor test-accessor)

