CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(error LANGUAGES CXX)

ADD_LIBRARY(error INTERFACE)

SET_TARGET_PROPERTIES(error PROPERTIES
                      INTERFACE_CXX_STANDARD 20
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(error INTERFACE header)
TARGET_LINK_LIBRARIES(error
                      INTERFACE fmt)

ADD_EXECUTABLE(test-error test/tests.cc)
SET_TARGET_PROPERTIES(test-error PROPERTIES
                      CXX_STANDARD 20
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-error error Catch2)

ENABLE_TESTING()
ADD_TEST(test-error test-error)

