CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(graph LANGUAGES CXX)

IF(TARGET graph)
    RETURN()
ENDIF()

IF(NOT TARGET Catch2)
    ADD_SUBDIRECTORY("../catch/" Catch2)
ENDIF()

ADD_LIBRARY(graph INTERFACE)

SET_TARGET_PROPERTIES(graph PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)
TARGET_INCLUDE_DIRECTORIES(graph INTERFACE header)

ADD_EXECUTABLE(test-graph test/tests.cc)
SET_TARGET_PROPERTIES(test-graph PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-graph graph Catch2)

ENABLE_TESTING()
ADD_TEST(test-graph test-graph)

