CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(json LANGUAGES CXX)

IF(TARGET json)
    RETURN()
ENDIF()

IF(NOT TARGET Catch2)
    ADD_SUBDIRECTORY("../catch/" Catch2)
ENDIF()

ADD_LIBRARY(json INTERFACE)

SET_TARGET_PROPERTIES(json PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(json INTERFACE header)
#target_link_libraries(json INTERFACE tuple)

ADD_EXECUTABLE(test-json test/tests.cc)
SET_TARGET_PROPERTIES(test-json PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-json json Catch2)

ENABLE_TESTING()
ADD_TEST(test-json test-json)

