CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(lambda LANGUAGES CXX)

ADD_LIBRARY(lambda INTERFACE)

SET_TARGET_PROPERTIES(lambda PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(lambda INTERFACE header)

ADD_EXECUTABLE(test-lambda test/tests.cc)
SET_TARGET_PROPERTIES(test-lambda PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-lambda lambda Catch2)

ENABLE_TESTING()
ADD_TEST(test-lambda test-lambda)

