CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(list LANGUAGES CXX)

ADD_LIBRARY(list INTERFACE)

SET_TARGET_PROPERTIES(list PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(list INTERFACE header)
TARGET_LINK_LIBRARIES(list INTERFACE normal_iterator)

ADD_EXECUTABLE(test-list test/tests.cc)
SET_TARGET_PROPERTIES(test-list PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-list list Catch2)

ENABLE_TESTING()
ADD_TEST(test-list test-list)

